--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@coreui/coreui": "^2.1.9",
+    "jquery": "^3.4.0",
+    "node-sass": "^4.11.0",
+    "perfect-scrollbar": "^1.4.0",
+    "popper": "^1.0.1",
+    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
