--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "popper": "^1.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-intl": "^2.8.0",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
@@ -20,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate": "plop --plopfile generator/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "plop": "^2.3.0"
   }
 }
