--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-intl": "^2.8.0",
+    "react-intl-cra": "^0.3.4",
+    "react-intl-translations-manager": "^5.0.3",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
@@ -23,7 +25,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate": "plop --plopfile generator/index.js"
+    "generate": "plop --plopfile generator/index.js",
+    "extract:messages": "react-intl-cra 'src/**/*.{js,jsx}' -o 'src/i18n/messages/messages.json'",
+    "manage:translations": "node ./translationRunner.js"
   },
   "eslintConfig": {
     "extends": "react-app"
