--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@coreui/coreui": "^2.1.9",
+    "@coreui/icons": "^0.3.0",
+    "flag-icon-css": "^3.3.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.0",
     "node-sass": "^4.11.0",
     "perfect-scrollbar": "^1.4.0",
@@ -17,8 +20,10 @@
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "simple-line-icons": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
