--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@coreui/coreui": "^2.1.9",
     "@coreui/icons": "^0.3.0",
+    "@coreui/react": "^2.1.5",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.0",
