--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-intl": "^2.8.0",
     "react-intl-cra": "^0.3.4",
     "react-intl-translations-manager": "^5.0.3",
+    "react-loadable": "^5.5.0",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
