--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.5",
     "react-intl": "^2.8.0",
+    "react-loadable": "^5.5.0",
     "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-config": "^4.4.0-beta.8",
