--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
+    "plop": "^2.3.0",
     "react-scripts": "^2.1.8"
   },
   "scripts": {
@@ -52,7 +53,10 @@
     "test": "react-scripts test",
     "test:cov": "react-scripts test --coverage",
     "test:debug": "react-scripts --inspect-brk test --runInBand",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate": "plop --plopfile generator/index.js",
+    "extract:messages": "react-intl-cra 'src/**/*.{js,jsx}' -o 'src/i18n/messages/messages.json'",
+    "manage:translations": "node ./translationRunner.js"
   },
   "bugs": {
     "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
