--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "react-router-dom": "~4.3.1",
     "react-test-renderer": "^16.8.5",
     "reactstrap": "^7.1.0",
+    "reactstrap-confirm": "^1.0.4",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "spinkit": "^1.2.5"
   },
   "devDependencies": {
     "plop": "^2.3.0",
