--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router-config": "^4.4.0-beta.8",
     "react-router-dom": "~4.3.1",
     "react-test-renderer": "^16.8.5",
+    "react-toastify": "^5.1.0",
     "reactstrap": "^7.1.0",
     "reactstrap-confirm": "^1.0.4",
     "redux": "^4.0.1",
