--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,6 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/database.yml
+/config/text_local_api.yml
 /coverage/*
 /doc/*
